--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@knaadh/nestjs-drizzle-pg": "^1.0.0",
-    "@nestia/core": "^3.2.1",
-    "@nestia/e2e": "^0.4.3",
-    "@nestia/fetcher": "^3.2.1",
+    "@nestia/core": "^3.2.5",
+    "@nestia/e2e": "^0.6.0",
+    "@nestia/fetcher": "^3.2.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -35,11 +35,11 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typia": "^6.1.0",
+    "typia": "^6.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@nestia/sdk": "^3.2.1",
+    "@nestia/sdk": "^3.2.5",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -65,7 +65,7 @@
     "ts-node": "^10.9.2",
     "ts-patch": "^3.2.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.2"
+    "typescript": "5.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
